<resources>
    <string name="app_name">QRGame</string>
    <string name="string_geolocationPrompt">Save Geolocation?</string>
    <string name="string_comment">Comment:</string>
    <string name="string_next">Next</string>


    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="capture_image">Capture Image</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="image">Image</string>
    <string name="placeholder">Placeholder</string>
    <string name="finish">Finish</string>
    <string name="new_qr_code">New QR Code!</string>
    <string name="add_location_prompt">Add a picture of your location!</string>
    <string name="title_activity_details">DetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username:</string>
    <string name="score_inventory">Score:</string>
</resources>